# HuG

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt
dev-docs/: CHANGELOG-Fixes1.md  CHANGELOG-Master.md  CHANGELOG-Phase-1.md  CHANGELOG-Phase-2.md  CHANGELOG-Phase-3.md  CHANGELOG-Phase-4.md  CHANGELOG-Phase-5.md  CHANGELOG-Phase-6.md  HuG-01-TECHNICAL-SPECIFICATION.md  HuG-02-IMPLEMENTATION-GUIDE.md  HuG-03-JSON-SCHEMA-REFERENCE.md  HuG-04-AI-AGENT-NOTES.md  dev-tasks.md
docs/: USER-GUIDE.md
package/: hug.spec
scripts/: build.py
snippets/code/: bash-basics.json  csharp-basics.json  go-basics.json  html-css-basics.json  java-basics.json  javascript-basics.json  python-basics.json  rust-basics.json  sql-basics.json  typescript-basics.json
snippets/general/: service.json
src/hug/: __main__.py  app.py  config.py
src/hug/models/: library.py  snippet.py
src/hug/services/: hotkey.py  inserter.py  watcher.py
src/hug/ui/: palette.py  settings.py  snippet_editor.py  tray.py
src/hug/ui/widgets/: preview_pane.py  snippet_tree.py
tests/: test_config.py  test_models.py  test_services_watcher.py  test_ui_palette.py  test_ui_tray.py
