[project]
name = "hug"
version = "1.0.0"
description = "HuG - Text/Code Snippet Manager"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5.0",
    "pynput>=1.7.6",
]

[project.scripts]
hug = "hug.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.2.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "pyinstaller>=5.0.0",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
